@@ -21,6 +21,9 @@
 # log file (/var/log/ebusd.log)
 #logfile=/var/log/ebusd.log
 
+# don't check serial device (NO | YES/NO)
+#nodevicecheck=YES
+
 # pid file (/var/run/ebusd.pid)      
 #pidfile=/var/run/ebusd.pid
 
