@@ -28,13 +28,10 @@
 #define DAEMON_CFGDIR         "/etc/ebusd"
 #define DAEMON_CFGFILE        DAEMON_CFGDIR"/ebusd.conf"
 #define DAEMON_EXTENSION      "csv"
-#define DAEMON_FOREGROUND     NO
 #define DAEMON_LOGLEVEL       "INF"
 #define DAEMON_LOGFILE        "/var/log/ebusd.log"
-#define DAEMON_NOSYN          NO
 #define DAEMON_PIDFILE        "/var/run/ebusd.pid"
 #define DAEMON_RAWFILE        "/tmp/ebusd.bin"
-#define DAEMON_RAWDUMP        NO
 
 
 void usage(void);
